@@ -304,7 +304,8 @@ bool qjackctlMainForm::queryClose (void)
 
     // Check if JACK daemon is currently running...
     if (bQueryClose && m_pJack && m_pJack->isRunning() && m_pSetup->bQueryClose) {
-        switch (QMessageBox::warning(this, tr("Warning"),
+        switch (QMessageBox::warning(this,
+			QJACKCTL_TITLE ": " + tr("Warning"),
             tr("JACK is currently running.") + "\n\n" +
             tr("Do you want to terminate the JACK audio server?"),
             tr("Terminate"), tr("Leave"), tr("Cancel"))) {
@@ -448,7 +449,8 @@ void qjackctlMainForm::startJack (void)
 
     // Is the server process instance still here?
     if (m_pJack) {
-        switch (QMessageBox::warning(this, tr("Warning"),
+        switch (QMessageBox::warning(this,
+			QJACKCTL_TITLE ": " + tr("Warning"),
             tr("Could not start JACK.") + "\n\n" +
             tr("Maybe JACK audio server is already started."),
             tr("Stop"), tr("Kill"), tr("Cancel"))) {
@@ -681,7 +683,8 @@ void qjackctlMainForm::stopJack (void)
 	if (m_pSetup->bQueryShutdown
 		&& m_pJack && m_pJack->isRunning() && !m_bJackSurvive
 		&& m_pConnectionsForm && m_pConnectionsForm->isJackConnected()
-		&& QMessageBox::warning(this, tr("Warning"),
+		&& QMessageBox::warning(this,
+			QJACKCTL_TITLE ": " + tr("Warning"),
 			tr("Some client audio applications") + "\n" +
 			tr("are still active and connected.") + "\n\n" +
 			tr("Do you want to stop the JACK audio server?"),
@@ -879,7 +882,8 @@ void qjackctlMainForm::appendMessagesError( const QString& s )
 
     appendMessagesColor(s.simplifyWhiteSpace(), "#ff0000");
 
-    QMessageBox::critical(this, tr("Error"), s, tr("Cancel"));
+    QMessageBox::critical(this,
+		QJACKCTL_TITLE ": " + tr("Error"), s, tr("Cancel"));
 }
 
 
@@ -2371,7 +2375,8 @@ void qjackctlMainForm::showDirtySettingsWarning (void)
     // If client service is currently running,
     // prompt the effective warning...
     if (m_pJackClient) {
-        QMessageBox::warning(this, tr("Warning"),
+        QMessageBox::warning(this,
+			QJACKCTL_TITLE ": " + tr("Warning"),
             tr("Server settings will be only effective after\n"
                "restarting the JACK audio server."), tr("OK"));
     }   // Otherwise, it will be just as convenient to update status...
@@ -2382,7 +2387,8 @@ void qjackctlMainForm::showDirtySettingsWarning (void)
 // Setup otions change warning.
 void qjackctlMainForm::showDirtySetupWarning (void)
 {
-    QMessageBox::information(this, tr("Information"),
+    QMessageBox::information(this,
+		QJACKCTL_TITLE ": " + tr("Information"),
         tr("Some settings will be only effective\n"
            "the next time you start this program."), tr("OK"));
 }
