@@ -45,7 +45,7 @@
         </font>
     </property>
     <property name="caption">
-        <string>Messages - JACK Audio Connection Kit</string>
+		<string>QjackCtl: Messages</string>
     </property>
     <property name="icon">
         <pixmap>messages1.png</pixmap>
