@@ -45,7 +45,7 @@
         </font>
     </property>
     <property name="caption">
-        <string>Patchbay - JACK Audio Connection Kit</string>
+		<string>QjackCtl: Patchbay</string>
     </property>
     <property name="icon">
         <pixmap>patchbay1.png</pixmap>
