@@ -41,7 +41,7 @@
         </sizepolicy>
     </property>
     <property name="caption">
-        <string>Setup - JACK Audio Connection Kit</string>
+		<string>QjackCtl: Setup</string>
     </property>
     <property name="sizeGripEnabled">
         <bool>true</bool>
