@@ -45,7 +45,7 @@
         </font>
     </property>
     <property name="caption">
-        <string>Status - JACK Audio Connection Kit</string>
+		<string>QjackCtl: Status</string>
     </property>
     <property name="icon">
         <pixmap>status1.png</pixmap>
