@@ -5,6 +5,8 @@ ChangeLog
 
 CVS HEAD
 
+- All widget captions changed to include proper application title prefix.
+
 - Attempt to bring those aging autoconf templates to date; sample SPEC file
   for RPM build is now being included and generated at configure time.
 
